hphp/test/slow/coeffects/memo-soft-make-inaccessible-parsing-bad.php.expectf
Fatal error: This function requires the defaults context to be memoized using #MakeICInaccessible or #SoftMakeICInaccessible in %s on line 3
